--- a/lib/libc/sys/pinsyscall.2
+++ b/lib/libc/sys/pinsyscall.2
@@ -1,4 +1,4 @@
-.\" $OpenBSD: pinsyscall.2,v 1.3 2023/02/21 02:13:27 deraadt Exp $
+.\" $OpenBSD: pinsyscall.2,v 1.4 2023/02/21 14:42:25 deraadt Exp $
 .\"
 .\" Copyright (c) 2023 Theo de Raadt <deraadt@openbsd.org>
 .\"
@@ -32,10 +32,7 @@ system call specifies the
 .Va start
 to
 .Va start + len
-range in the
-.Pa libc.so
-shared library where the call stub for the
-specified
+range in the adress space where the call stub for the specified
 .Va syscall
 resides.
 This range is typically under 80 bytes long, and varies by architecture.
@@ -48,6 +45,7 @@ The shared library linker
 automatically tells the kernel about
 .Va SYS_execve
 at startup.
+For static binaries, libc initialization performs the same action.
 .Pp
 Once the kernel knows the specific location in the address space where
 that system call must be entered from, any attempt to use a system-call
