--- a/lib/libc/sys/pinsyscall.2
+++ b/lib/libc/sys/pinsyscall.2
@@ -1,4 +1,4 @@
-.\" $OpenBSD: pinsyscall.2,v 1.4 2023/02/21 14:42:25 deraadt Exp $
+.\" $OpenBSD: pinsyscall.2,v 1.5 2023/02/21 19:49:50 jmc Exp $
 .\"
 .\" Copyright (c) 2023 Theo de Raadt <deraadt@openbsd.org>
 .\"
@@ -32,7 +32,7 @@ system call specifies the
 .Va start
 to
 .Va start + len
-range in the adress space where the call stub for the specified
+range in the address space where the call stub for the specified
 .Va syscall
 resides.
 This range is typically under 80 bytes long, and varies by architecture.
