--- a/lib/libc/sys/getlogin.2
+++ b/lib/libc/sys/getlogin.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: getlogin.2,v 1.22 2020/02/09 02:32:43 jsg Exp $
+.\"	$OpenBSD: getlogin.2,v 1.23 2023/02/22 06:31:51 guenther Exp $
 .\"	$NetBSD: getlogin.2,v 1.4 1995/02/27 12:33:03 cgd Exp $
 .\"
 .\" Copyright (c) 1989, 1991, 1993
@@ -30,14 +30,14 @@
 .\"
 .\"	@(#)getlogin.2	8.1 (Berkeley) 6/9/93
 .\"
-.Dd $Mdocdate: February 9 2020 $
+.Dd $Mdocdate: February 22 2023 $
 .Dt GETLOGIN 2
 .Os
 .Sh NAME
 .Nm getlogin ,
 .Nm getlogin_r ,
 .Nm setlogin
-.Nd get/set login name
+.Nd get or set login name
 .Sh SYNOPSIS
 .In unistd.h
 .Ft char *
