--- a/lib/libc/sys/syscall.2
+++ b/lib/libc/sys/syscall.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: syscall.2,v 1.15 2023/02/11 23:07:28 deraadt Exp $
+.\"	$OpenBSD: syscall.2,v 1.16 2023/02/22 07:04:50 jmc Exp $
 .\"	$NetBSD: syscall.2,v 1.4 1995/02/27 12:38:53 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
@@ -30,7 +30,7 @@
 .\"
 .\"     @(#)syscall.2	8.1 (Berkeley) 6/16/93
 .\"
-.Dd $Mdocdate: February 11 2023 $
+.Dd $Mdocdate: February 22 2023 $
 .Dt SYSCALL 2
 .Os
 .Sh NAME
@@ -49,7 +49,6 @@ interface has the specified
 with the specified arguments.
 Symbolic constants for system calls can be found in the header file
 .In sys/syscall.h .
-.Pp
 .Sh RETURN VALUES
 The return values are defined by the system call being invoked.
 In general, for system calls returning
