--- a/share/man/man4/man4.armv7/mvodog.4
+++ b/share/man/man4/man4.armv7/mvodog.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mvodog.4,v 1.1 2023/03/02 10:07:18 jmatthew Exp $
+.\"	$OpenBSD: mvodog.4,v 1.2 2023/03/02 11:56:25 jsg Exp $
 .\"
 .\" Copyright (c) 2019 Patrick Wildt <patrick@blueri.se>
 .\"
@@ -15,7 +15,7 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .Dd $Mdocdate: March 2 2023 $
-.Dt MVODOG 4
+.Dt MVODOG 4 armv7
 .Os
 .Sh NAME
 .Nm mvodog
