--- a/share/man/man4/man4.armv7/mvortc.4
+++ b/share/man/man4/man4.armv7/mvortc.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mvortc.4,v 1.1 2023/03/02 10:07:18 jmatthew Exp $
+.\"	$OpenBSD: mvortc.4,v 1.2 2023/03/02 11:56:25 jsg Exp $
 .\"
 .\" Copyright (c) 2018 Mark Kettenis <kettenis@openbsd.org>
 .\"
@@ -15,7 +15,7 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .Dd $Mdocdate: March 2 2023 $
-.Dt MVORTC 4
+.Dt MVORTC 4 armv7
 .Os
 .Sh NAME
 .Nm mvortc
