--- a/share/man/man4/mii.4
+++ b/share/man/man4/mii.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mii.4,v 1.30 2023/03/04 23:32:40 kettenis Exp $
+.\"	$OpenBSD: mii.4,v 1.31 2023/03/05 03:17:04 jsg Exp $
 .\"	$NetBSD: mii.4,v 1.1 1998/11/04 05:21:50 thorpej Exp $
 .\"
 .\" Copyright (c) 1998 The NetBSD Foundation, Inc.
@@ -29,7 +29,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: March 4 2023 $
+.Dd $Mdocdate: March 5 2023 $
 .Dt MII 4
 .Os
 .Sh NAME
@@ -138,5 +138,5 @@ program.
 .Xr ukphy 4 ,
 .Xr urlphy 4 ,
 .Xr xmphy 4 ,
-.Xt ytphy 4 ,
+.Xr ytphy 4 ,
 .Xr ifconfig 8
