oops, overridden has two d's; apologies ajacoutot for not spotting that.

--- a/usr.bin/locale/locale.1
+++ b/usr.bin/locale/locale.1
@@ -1,4 +1,4 @@
-.\" $OpenBSD: locale.1,v 1.9 2023/03/05 10:11:29 ajacoutot Exp $
+.\" $OpenBSD: locale.1,v 1.10 2023/03/05 12:55:36 jmc Exp $
 .\"
 .\" Copyright 2016, 2020 Ingo Schwarze <schwarze@openbsd.org>
 .\" Copyright 2013 Stefan Sperling <stsp@openbsd.org>
@@ -30,7 +30,7 @@ If the
 utility is invoked without any arguments, the current locale
 configuration is shown.
 Values for categories that are not set in the environment or that are
-overriden by
+overridden by
 .Ev LANG
 or
 .Ev LC_ALL
