knock out double .Pp;

--- a/share/man/man1/dpb.1
+++ b/share/man/man1/dpb.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dpb.1,v 1.29 2023/03/05 10:41:59 espie Exp $
+.\"	$OpenBSD: dpb.1,v 1.30 2023/03/05 12:56:41 jmc Exp $
 .\"
 .\" Copyright (c) 2010-2013 Marc Espie <espie@openbsd.org>
 .\"
@@ -1068,7 +1068,6 @@ Conflicting ports had been annotated with
 .Ev DPB_PROPERTIES Ns = Ns Ar tag:kde3 ,
 .Ev DPB_PROPERTIES Ns = Ns Ar tag:kde4
 respectively.
-.Pp
 .Pp
 More generally, with
 .Ev DPB_PROPERTIES Ns = Ns Ar tag:A ,
