Actually, LANG only set the default.
from guenther@

--- a/usr.bin/locale/locale.1
+++ b/usr.bin/locale/locale.1
@@ -1,4 +1,4 @@
-.\" $OpenBSD: locale.1,v 1.10 2023/03/05 12:55:36 jmc Exp $
+.\" $OpenBSD: locale.1,v 1.11 2023/03/05 18:55:34 ajacoutot Exp $
 .\"
 .\" Copyright 2016, 2020 Ingo Schwarze <schwarze@openbsd.org>
 .\" Copyright 2013 Stefan Sperling <stsp@openbsd.org>
@@ -31,8 +31,6 @@ utility is invoked without any arguments, the current locale
 configuration is shown.
 Values for categories that are not set in the environment or that are
 overridden by
-.Ev LANG
-or
 .Ev LC_ALL
 are displayed between double quotes.
 .Pp
