Add check for RSA key pair modulus & public exponent
Both the SPKI inside a CA's .cer TBS section and Signers wrapped in CMS
must be RSA, with mod 2048 & (e) 0x10001

OK tb@

--- a/usr.sbin/rpki-client/rpki-client.8
+++ b/usr.sbin/rpki-client/rpki-client.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: rpki-client.8,v 1.90 2023/03/06 15:50:33 job Exp $
+.\"	$OpenBSD: rpki-client.8,v 1.91 2023/03/06 16:04:52 job Exp $
 .\"
 .\" Copyright (c) 2019 Kristaps Dzonsons <kristaps@bsd.lv>
 .\"
@@ -391,6 +391,16 @@ agreement regarding ARIN service restrictions.
 .%A Geoff Huston
 .%U https://www.rfc-editor.org/rfc/rfc7318
 .%D Jul, 2014
+.%I IETF
+.Re
+.Pp
+.Rs
+.%T The Profile for Algorithms and Key Sizes for Use in the Resource Public Key Infrastructure
+.%R RFC 7935
+.%A Geoff Huston
+.%A George Michaelson
+.%U https://www.rfc-editor.org/rfc/rfc7935
+.%D Aug, 2016
 .%I IETF
 .Re
 .Pp
