--- a/usr.sbin/rpki-client/rpki-client.8
+++ b/usr.sbin/rpki-client/rpki-client.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: rpki-client.8,v 1.91 2023/03/06 16:04:52 job Exp $
+.\"	$OpenBSD: rpki-client.8,v 1.92 2023/03/06 16:17:17 deraadt Exp $
 .\"
 .\" Copyright (c) 2019 Kristaps Dzonsons <kristaps@bsd.lv>
 .\"
@@ -270,7 +270,7 @@ default roa-set output file.
 .Pp
 All the top-level TAL are included, except the ARIN TAL which is not
 made available with terms compatible with open source.
-That public key is treated as a propriety object in a lengthy legal
+That public key is treated as a proprietary object in a lengthy legal
 agreement regarding ARIN service restrictions.
 .Sh EXIT STATUS
 .Ex -std
