correct macro request (.nm -> .Nm);

--- a/share/man/man4/rkcomphy.4
+++ b/share/man/man4/rkcomphy.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: rkcomphy.4,v 1.1 2023/03/12 19:02:34 kettenis Exp $
+.\"	$OpenBSD: rkcomphy.4,v 1.2 2023/03/12 20:14:41 jmc Exp $
 .\"
 .\" Copyright (c) 2023 Mark Kettenis <kettenis@openbsd.org>
 .\"
@@ -31,7 +31,7 @@ The PHY supports the PCIe 2.0 (2.5 GT/s and 5 GT/s), USB 3.0 (5 Gbps),
 SATA (1.5 Gbit/s, 3 Gbit/s and 6 Gbit/s) and QSGMII (1.25 Gbit/s and 5
 Gbit/s) protocols.
 The
-.nm
+.Nm
 driver does not implement support for QSGMII.
 .Sh SEE ALSO
 .Xr intro 4
