--- a/sys/arch/alpha/stand/nboot/boot.8
+++ b/sys/arch/alpha/stand/nboot/boot.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: boot.8,v 1.1 2023/03/13 20:20:13 miod Exp $
+.\"	$OpenBSD: boot.8,v 1.2 2023/03/14 06:55:31 jmc Exp $
 .\"
 .\" Copyright (c) 1997-2001 Michael Shalayeff
 .\" All rights reserved.
@@ -25,7 +25,7 @@
 .\" THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\"
-.Dd $Mdocdate: March 13 2023 $
+.Dd $Mdocdate: March 14 2023 $
 .Dt BOOT 8 alpha
 .Os
 .Sh NAME
@@ -118,14 +118,13 @@ The following commands are accepted at the
 .Nm
 prompt:
 .Bl -tag -width shorten
-.It Ic boot Oo Ns Ar image Oc Op Fl acds
+.It Ic boot Oo Ns Ar image Oc Op Fl cdns
 Boots the specified kernel image with any options given.
 If
 .Ar image
 is omitted, values from the
 .Nm
 variables will be used.
-.Pp
 .Bl -tag -width _a_
 .\" XXX Consider documenting -a as silently doing nothing, accepted for
 .\" XXX compatibility purpose (since multiuser boot is the default).
@@ -188,6 +187,7 @@ Number of seconds boot will wait for human intervention before
 booting the default kernel image.
 .\" .It Ic time
 .\" Displays system time and date.
+.El
 .El
 .Sh FILES
 .Bl -tag -width /etc/boot.conf -compact
