--- a/share/man/man4/bwfm.4
+++ b/share/man/man4/bwfm.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bwfm.4,v 1.18 2022/04/23 18:41:13 schwarze Exp $
+.\" $OpenBSD: bwfm.4,v 1.19 2023/03/14 11:25:22 kn Exp $
 .\"
 .\" Copyright (c) 2017 Patrick Wildt <patrick@blueri.se>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: April 23 2022 $
+.Dd $Mdocdate: March 14 2023 $
 .Dt BWFM 4
 .Os
 .Sh NAME
@@ -78,7 +78,6 @@ for other cards.
 The
 .Nm
 driver can be configured to use
-Wired Equivalent Privacy (WEP) or
 Wi-Fi Protected Access (WPA1 and WPA2).
 WPA2 is the current encryption standard for wireless networks.
 It is strongly recommended that neither WEP nor WPA1
