--- a/usr.bin/head/head.1
+++ b/usr.bin/head/head.1
@@ -37,14 +37,16 @@
 .Nd display first few lines of files
 .Sh SYNOPSIS
 .Nm head
-.Op Fl Ar count | Fl n Ar count
+.Op Fl Ar count | Fl n Ar count | Fl c Ar bytes
 .Op Ar
 .Sh DESCRIPTION
 The
 .Nm
 utility copies the first
 .Ar count
-lines of each specified
+lines or
+.Ar bytes
+of each specified
 .Ar file
 to the standard output.
 If no files are named,
@@ -61,6 +63,14 @@ Copy the first
 .Ar count
 lines of each input file to the standard output.
 .Ar count
+must be a positive decimal integer.
+.El
+.Bl -tag -width Ds
+.It Fl c Ar bytes
+Copy the first
+.Ar bytes
+of each input file to the standard output.
+.Ar bytes
 must be a positive decimal integer.
 .El
 .Pp
@@ -85,6 +95,13 @@ in the following way to, for example, display only line 500 from the file
 .Ar foo :
 .Pp
 .Dl $ head -n 500 foo | tail -1
+.Pp
+.Nm
+can be used in conjunction
+.Xr urandom 4
+to create a random string of bytes:
+.Pp
+.Dl $ head -c 32 /dev/urandom | base64
 .Sh SEE ALSO
 .Xr cat 1 ,
 .Xr cut 1 ,
