manpage head update

--- a/usr.bin/head/head.1
+++ b/usr.bin/head/head.1
@@ -34,7 +34,7 @@
 .Os
 .Sh NAME
 .Nm head
-.Nd display first few lines of files
+.Nd display first few lines or bytes of files
 .Sh SYNOPSIS
 .Nm head
 .Op Fl Ar count | Fl n Ar count | Fl c Ar bytes
